--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     {% seo %}
+    <link rel="icon" type="image/png" href="{{ site.url }}/assets/images/favicon.ico">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="{{ site.url }}/assets/css/main.css">
@@ -27,8 +28,8 @@
           </div>
           <hr>
           <div>
-            <span class="credits left">Written and maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></span>
-            <span class="credits right">Hosted on GitHub Pages &mdash; Inspired by <a href="https://twitter.com/michigangraham">mattgraham</a>'s Midnight theme</span>
+            <span class="credits left">Written and maintained by <a href="{{ site.github.owner_url }}" target="_blank">{{ site.github.owner_name }}</a></span>
+            <span class="credits right">Hosted on GitHub Pages &mdash; Inspired by <a href="https://github.com/pages-themes/midnight" target="_blank">Midnight theme</a></span>
           </div>
           <br/>
         </section>
@@ -38,6 +39,11 @@
           {{ content }}
 
         </section>
+
+        {% if page.url == '/' %}
+          <div class="small-separator"></div>
+          {% include last_post.html %}
+        {% endif %}
 
       </div> 
     </main>
