--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
           </div>
           <hr>
           <div>
-            <span class="credits left">Written and maintained by <a href="{{ site.github.owner_url }}" target="_blank">{{ site.github.owner_name }}</a></span>
+            <span class="credits left">Written and maintained by <a href="{{ site.author.github.url }}" target="_blank">{{ site.author.github.name }}</a></span>
             <span class="credits right">Hosted on GitHub Pages &mdash; Inspired by <a href="https://github.com/pages-themes/midnight" target="_blank">Midnight theme</a></span>
           </div>
           <br/>
